Change site title and update personal details
Updated site title and description, modified location and resume URL.

--- a/_config.yml
+++ b/_config.yml
@@ -8,16 +8,16 @@ plugins:
 
 #-------------------------------
 # General Site Settings
-title: Johnny Hopkins
-description: "Hi I'm Johnny, and I'm a Data Scientist.  My portfolio focuses on interesting projects I've recently undertaken, with a strong emphasis on business impact. Please visit my Github & LinkedIn pages (or download my Resume) by using the links below!"
+title: Morie Analytics
+description: "Morie Analytics portfolio focuses on interesting projects for floating wind undertaken, with a strong emphasis on business impact. Please visit my Github & LinkedIn pages (or download my Resume) by using the links below!"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 #-------------------------------
 # About Section
 subtitle: Data Science <span style="color:#f58506"> Portfolio </span>
-location: "London, UK"
-resume_url: /docs/resume.docx
+location: "El Puerto de Santa Maria, Cadiz. Spain"
+resume_url: /docs/C V_F e l i p e  J.  M o r e n o_F e b  2 0 2 6.pdf
 avatar_image: /img/profile_picture.JPG
 
 #-------------------------------
@@ -51,4 +51,5 @@ defaults:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
 
