Updated CV Feb 2026, added Morie logo, updated config

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 subtitle: Data Science <span style="color:#f58506"> Portfolio </span>
 location: "El Puerto de Santa Maria, Cadiz. Spain"
 resume_url: /docs/C V_F e l i p e  J.  M o r e n o_F e b  2 0 2 6.pdf
-avatar_image: /img/profile_picture.JPG
+avatar_image: /img/morie_analytics_logo.JPG
 
 #-------------------------------
 # Contact links
