--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ plugins:
 #-------------------------------
 # General Site Settings
 title: Morie Analytics
-description: "Morie Analytics portfolio focuses on interesting projects for floating wind undertaken, with a strong emphasis on business impact. Please visit my Github & LinkedIn pages (or download my Resume) by using the links below!"
+description: "Morie Analytics is a technical portfolio dedicated to floating offshore wind innovation, combining advanced engineering tools, data science and strategic thinking. Projects showcased here reflect real-world offshore challenges — with a clear focus on measurable business impact, optimization and scalable solutions."
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
@@ -51,6 +51,7 @@ defaults:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
 
 
 
